--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,13 @@
       </div>
     </div>
 
-    <div class="col-lg-6">
+    <div class="col-lg-6 text-center">
+      <img src="{{ url_for('static', filename='fotos/logo_oficina.png') }}" 
+          alt="Logo Oficina do Micro" 
+          class="img-fluid rounded-3 shadow-sm"
+          style="max-width: 80%; height: auto;">
     </div>
+
 
   </div>
 </div>
