--- a/templates/novo_orcamento.html
+++ b/templates/novo_orcamento.html
@@ -61,7 +61,7 @@
         <div class="col-12">
           <label class="form-label" for="problema_constatado">Problema constatado:</label>
           <textarea class="form-control" id="problema_constatado" name="problema_constatado" rows="3"
-            placeholder="Descreva o que constatou..." required></textarea>
+            placeholder="Descreva o que constatou..." ></textarea>
         </div>
         <div class="col-12">
           <label class="form-label" for="observacoes_cliente">Observações (Visível para o cliente):</label>
