--- a/templates/detalhes_orcamento.html
+++ b/templates/detalhes_orcamento.html
@@ -99,6 +99,8 @@
           Gerar PDF</a>
         <a class="btn btn-info btn-sm" href="{{url_for('exibir_pdf_orcamento', orcamento_id=orcamento.id)}}"
           target="_blank">👁️ Exibir PDF</a>
+        <a class="btn btn-secondary btn-sm" href="{{url_for('gerar_comprovante_entrada_pdf', id=orcamento.id)}}">📄
+          Gerar Comprovante de entrada</a>
 
         {% if orcamento.status == 'Aprovado' %}
         <form action="{{ url_for('converter_orcamento_para_os', orcamento_id=orcamento.id) }}" method="POST"
