--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Área Administrativa - Oficina do Micro</title>
+  <link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
   <style>
@@ -184,6 +185,16 @@
     function retornar() {
       history.back();
     }
+
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', function () {
+        navigator.serviceWorker.register('/sw.js').then(function (registration) {
+          console.log('SW registered: ', registration);
+        }).catch(function (registrationError) {
+          console.error('SW registration failed: ', registrationError);
+        });
+      });
+      }
 
   </script>
   {% block scripts %}{% endblock %}
