implantado impressoras gerenciamento na admin

--- a/templates/base.html
+++ b/templates/base.html
@@ -78,6 +78,10 @@
               <li><a class="dropdown-item" href="{{ url_for('novo_contrato') }}">Novo Contrato</a></li>
               
               <li><a class="dropdown-item" href="{{ url_for('listar_contratos') }}">Listar Contratos</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="{{ url_for('listar_impressoras') }}">
+                <i class="bi bi-printer me-2"></i>Gerenciar Resets/Drivers
+              </a></li>
           
             </ul>
             
